--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -18,5 +18,5 @@ jobs:
       uses: mstksg/get-package@v1
       with:
         apt-get: libsdl2-dev
-    - name: Build
-      run: swift build
+    - name: Build and Test
+      run: make test
