--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/setup-java@v1.0.0
       with:
-        java-version: 1.8
+        java-version: openjdk@1.14
     - uses: actions/checkout@v1
     - name: Swift Setup
       uses: YOCKOW/Action-setup-swift@v1.1.0
