--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -8,9 +8,11 @@ jobs:
     runs-on: [ubuntu-18.04]
 
     steps:
-    - uses: actions/setup-java@v1.0.0
+    - uses: actions/setup-java@v1
       with:
-        java-version: openjdk@1.14
+        java-version: '1.8' # The JDK version to make available on the path. Takes a whole or semver JDK version, or 1.x syntax (e.g. 1.8 => Jdk 8.x). To specify a specific version for JDK 8 or older use the following pattern (8.0.x)
+        java-package: jdk # (jre, jdk, or jdk+fx) - defaults to jdk
+        architecture: x64 # (x64 or x86) - defaults to x64
     - uses: actions/checkout@v1
     - name: Swift Setup
       uses: YOCKOW/Action-setup-swift@v1.1.0
