--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -9,7 +9,7 @@ jobs:
 
     steps:
     - name: Environment Setup
-      run: sudo apt-get install -y libsdl2-dev
+      run: sudo apt-get update -y; sudo apt-get install -y libsdl2-dev
     - uses: actions/setup-java@v1
       with:
         java-version: '1.8' # The JDK version to make available on the path. Takes a whole or semver JDK version, or 1.x syntax (e.g. 1.8 => Jdk 8.x). To specify a specific version for JDK 8 or older use the following pattern (8.0.x)
