--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -19,7 +19,6 @@ jobs:
     - name: Swift Setup
       uses: YOCKOW/Action-setup-swift@v1.1.0
       with:
-        # The version of Swift.
-        swift-version: 5.1
+        swift-version: '5.1.4'
     - name: Build and Test
       run: make test
